--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@ body{
     cursor: pointer;
 
 }
-.veg-text{
-    display: none;
-}
 .header-content{
     display: flex;
     justify-content: space-around;
@@ -36,7 +33,7 @@ body{
 }
 .content{
     width: 500px;
-    font-size: 40px;
+    font-size: 20px;
 }
 .nav{
     background-color:#00802b;
@@ -45,7 +42,6 @@ body{
     padding: 5px 60px;
     color:black;
     height: 70px;
-    justify-content: space-around;
 }
 .veg-emoji{
     font-family: cursive;
@@ -57,18 +53,19 @@ body{
     align-items:center;
 }
 .veg-item{
-    margin: 30px;
+    margin:30px;
     cursor: pointer;
     display: flex;
     align-items: center;
 }
 .veg-item:hover{
-    color:black;
+    color:wheat;
 }
 .veg-icon{
     height: 40px;
-    width: 30px;
-    margin-right: 30px;
+    width:40px;
+    margin-left: 0px;
+    
 }
  /* Table device */
 @media screen and (min-width:501px) and (max-width:769px) {
@@ -91,7 +88,6 @@ body{
 .page-heading{
     font-size: 35px;
 }
-}
 
 .know-more{
     height:40px ;
@@ -109,18 +105,20 @@ body{
 .veg-emoji{
     font-size:20px;
 }
-.veg-text{
-    display: none;
+.Veg-text{
+    display:none;
+    
 }
 .veg{
-    margin-left: 20px;   
+    margin-left: 10px;   
 }
 .veg-item{
     margin-right:13px;
 }
 .veg-icon{
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     margin-right: 5px;
     justify-content: space-around;
+}
 }
